  - fixed identifier parsing in yaml.lang (https://gitlab.com/saalen/highlight/-/issues/190)
  - fixed symbol parsing in lisp.lang https://gitlab.com/saalen/highlight/-/issues/198
  - fixed string parsing in csharp.lang (https://gitlab.com/saalen/highlight/-/issues/199)
  - fixed string parsing in conf.lang (https://gitlab.com/saalen/highlight/-/issues/203)
  - CLI W32: prevented automatic file pattern expansion (https://gitlab.com/saalen/highlight/-/issues/186)
  - GUI: added Japanese translation (thanks to FunFun)
  - GUI: disabled floating panel (state restore fails)


== highlight 4.1

10.05.2021

  - improved handling of Custom theme attributes (https://gitlab.com/saalen/highlight/-/issues/182)
  - fixed wrong color code in edit-kwrite.theme
  - added rng file mapping (https://gitlab.com/saalen/highlight/-/merge_requests/129)
  - improved Lisp highlighting
  - GUI: fixed highlighting options tab title (thanks to Craig)


== highlight 4.0

23.03.2021

  - renamed `std` style name to `def`
  - version and README updates


== highlight 4.0 beta 7

15.03.2021

  - removed `extras/web_plugins`


== highlight 4.0 beta 6

20.02.2021

  - added user-select default property to HTML line number style


== highlight 4.0 beta 5

20.02.2021

  - revised color themes


== highlight 4.0 beta 4

16.02.2021

  - added two more keyword styles for default themes
  - added Custom theme attributes for Plain TeX, LaTeX, SVG and Pango
  - enabled syntax message output with `--ls-syntax-error`
  - GUI: enabled syntax error checkbox


== highlight 4.0 beta 3

11.02.2021

  - added Custom theme attribute
  - enabled inline stylesheets with `--ls-hover`
  - added Error and Hover theme properties
  - enabled syntax error highlighting with `ls-semantic`


== highlight 4.0 beta 2

09.02.2021

  - improved LSP message handling
  - added delay LSP parameter
  - added LSP semantic token styles to base16 themes
  - renamed `str` style name to `sng`
  - CLI: enabled `--ls-semantic` option